# dnp_firmware_updater

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  backup_printer_config.sh  pyproject.toml  recover_printer.sh  requirements-dev.txt  requirements.txt  setup.py
docs/: PROTOCOL.md
ds620_updater/: __init__.py  __main__.py  updater.py
firmware/: DS620_0452.s  DS620_PD_300_0111.cwd  DS620_PD_600_0111.cwd  DS620_PD_610_0111.cwd  DS620_SD_300_0111.cwd  DS620_SD_600_0111.cwd  DS620_SD_610_0111.cwd
tests/: __init__.py  test_protocol.py
